--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <h1>IMANI EDUCATION CENTRE</h1>
+  <h1>BETHANY HILL SCHOOL</h1>
   <h2>Parent Portal - Student Payment Summary</h2>
   
   <input type="text" id="admissionNumber" placeholder="Enter Admission Number">
